# experiment

./: .gitignore  CMakeLists.txt  cpp_debug.sh  cpp_release.sh  result.txt  rust_debug.sh  rust_release.sh  zig_debug.sh  zig_release.sh
.github/workflows/: run.yml
rust/: Cargo.toml
zig/: build.zig.zon
